# OOP-Team

./: README.md
Project/: CMakeLists.txt  main.cpp
Project/Controller/: Controller.h  ElectricScooterController.h  UserController.cpp  UserController.h
Project/Controller/ElectricScooterController/: ElectricScooterController.cpp  ElectricScooterController.h
Project/Controller/UserController/: UserController.cpp  UserController.h
Project/Data/: ClientDatabase  EmptyScooterDataBase  ManagerDatabase  ScooterDatabase
Project/Domain/: Domain.h  ObjectWithID.h
Project/Domain/Date/: Date.cpp  Date.h
Project/Domain/ElectricScooter/: EclectricScooter.cpp  EclectricScooter.h  ElectricScooter.cpp  ElectricScooter.h
Project/Domain/User/: Client.cpp  Client.h  Manager.cpp  Manager.h  User.cpp  User.h
Project/Domain/User/User/: User.h  (+1 more)
Project/Repository/: AbstractRepository.h  ClientRepository.h  CrudRepository.h  ElectricScooterRepository.cpp  ElectricScooterRepository.h  ElectricscooterRepository.cpp  ElectricscooterRepository.h  ManagerRepository.h  Repository.h
Project/Repository/CSV-FileRepository/: CSV-FileRepository.cpp  CSV-FileRepository.h
Project/Repository/Data/: ManagerDatabase
Project/Repository/ElectricScooterRepository/: ElectricScooterRepository.cpp  ElectricScooterRepository.h
Project/Repository/InMemoryRepository/: InMemoryRepository.cpp  InMemoryRepository.h
Project/Repository/UserRepositories/: UserRepository.cpp  UserRepository.h
Project/Tests/: TestAll.cpp
Project/Tests/TestController/: TestController.cpp
Project/Tests/TestDomain/: TestDomain.cpp  TestDomain.h
Project/Tests/TestRepository/: TestRepository.cpp
Project/UI/: ElectricScooterTable.cpp  ElectricScooterTable.h  MainWindow.cpp  MainWindow.h  UI.h  UserInterafce.cpp  UserInterafce.h  UserInterface.cpp  UserInterface.h
(+33 files in other folders)
